@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Collaborator {
    collaborator id
    name
    birthdate
    admission date
    address
    contact info
    taxpayer
}

class Team {
    numberOfCollaborators
}

class HRM {
    hrm id
    username
    password
}

class Skills {
    skill id
    skill description
}
class Task {
    name
    description
}


Organization "1" - "0..*" HRM : has >
Organization "1..*" - "0..*" Collaborator: has >
HRM "1" - "1..*" Collaborator : manages >
HRM "1" - "1..*" Skills : registers >
Collaborator "1" - "1..*" Team : form >
Collaborator "1" - "1..*" Skills : has >
Team "1" -- "*" Skills : requires a set of >
Team "1" -- "*" Task : carries out >
@enduml